# LoRA-Optimization

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: sft_qwen_0_5b.yaml
data/raw/: mcq.jsonl  mcq_arc_easy.jsonl  train.jsonl  valid.jsonl
src/data/: build_dataset.py  clean.py  schema.py  weak_label_filter.py
src/eval/: eval_calibration.py  eval_mcq.py  robustness_suite.py
src/infer/: chat.py  reject_sampling.py
src/scripts/: 0_download_example_data.sh  1_build_dataset.sh  2_train.sh  3_eval.sh
src/train/: sft_lora.py  utils.py
